Content work on homepage

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -14,6 +14,8 @@
 .text--secondary-color     { color: $secondary-color; }
 .text--tertiary-color      { color: $tertiary-color; }
 
+.text--blue                { color: $blue; }
+
 
 // Background colors
 // -------------------------------------------------------------------
