--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -39,7 +39,7 @@
 
 .link--text:hover,
 .link--text:focus {
-    color: $text-color;
+    color: $gray-3;
     text-decoration: none;
     transition: translate $fade;
 }
