--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,19 +8,17 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+        {%- seo -%}
         <meta property="og:type" content="website" />
 
         <!-- The compiled CSS file -->
         <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}"> 
 
-        <!-- Preload fonts -->
-        <link rel="preload" as="font" href="/fonts/SpaceGrotesk-Bold.woff2" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" as="font" href="/fonts/IBMPlexSans-Text.woff2" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" as="font" href="/fonts/IBMPlexSans-Bold.woff2" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" as="font" href="/fonts/IBMPlexSans-BoldItalic.woff2" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" as="font" href="/fonts/IBMPlexSans-TextItalic.woff2" type="font/woff2" crossorigin="anonymous">
-        <link rel="preload" as="font" href="/fonts/JetBrainsMono-Regular.woff2" type="font/woff2" crossorigin="anonymous">
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://use.typekit.net/vcb8jhq.css">
 
         <!-- Favicons -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -31,7 +29,7 @@
 
     </head>
 
-    <body>
+    <body class="has-animations">
 
         {%- include header.html -%}
 
