--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,112 @@
 layout: default
 ---
 
-<div>
-    This is the homepage
-</div>
+<header class="pt10">
+    <div class="container--md">
+        <nav>
+            <div class="grid-row grid-row--center">
+                <div class="grid-column">
+                    <img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+                </div>
+                <div class="grid-column align--right">
+                    <a href="" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
+                    <a href="" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
+                </div>
+            </div>
+        </nav>
+    </div>
+</header>
+
+<section class="pt10 pb10">
+    <div class="container--md">
+        <div class="grid-row">
+            <div class="grid-column">
+                <p class="h1 bold mb5">Hi, I'm Jordan.</p>
+                <p class="h2 mb2">I'm a Senior UX Researcher and Experience Designer with 8+ years constructing digital&nbsp;experiences.</p>
+                <p class="h2">I'm passionate about user-first and evidence-based&nbsp;design.</p>
+                <div class="mt7">
+                    <a href="" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
+                    <span class="sm:block sm:align--center">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                </div>
+            </div>
+            <div class="grid-column span-6"></div>
+        </div>
+
+    </div>
+</section>
+
+<section class="pt10 pb10">
+    <div class="container--md">
+        <div class="grid-row">
+            <div class="grid-column">
+                <h3 class="all-caps bold mb2">WORK</h3>
+                <p>Take a look at some projects I've worked on.</p>
+            </div>
+            <div class="grid-column span-6"></div>
+        </div>
+
+        <div class="border--full rounded mt3" style="height: 200px"></div>
+        <div class="border--full rounded mt5" style="height: 200px"></div>
+        <div class="border--full rounded mt5" style="height: 200px"></div>
+    </div>
+</section>
+
+<section class="pt10 pb10">
+    <div class="container--md">
+        <div class="grid-row">
+            <div class="grid-column">
+                <h3 class="all-caps bold mb2">ARTICLES</h3>
+                <p>I'm the Co-Creator of <a class="link" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 10k email subscribers. Here are some articles I've recently written and illustrated.</p>
+            </div>
+            <div class="grid-column span-6"></div>
+        </div>
+
+        <div class="mt3">
+            <div class="grid-row">
+                <div class="grid-column span-one-third">
+                    <a target="_blank" href="https://uxtools.co/blog/what-no-one-explains-about-the-design-process/" class="link link--text pointer">
+                        <img class="rounded" src="/img/process.svg" alt="Fixing User Personas">
+                        <p class="bold mt2">What No One Explains About the Design&nbsp;Process&nbsp;&nbsp;→</p>
+                    </a>
+                </div>
+                <div class="grid-column span-one-third">
+                    <a target="_blank" href="https://uxtools.co/blog/fixing-user-personas/" class="link link--text pointer">
+                        <img class="rounded" src="/img/fixing-user-personas.svg" alt="Fixing User Personas">
+                        <p class="bold mt2">Fixing User&nbsp;Personas&nbsp;&nbsp;→</p>
+                    </a>
+                </div>
+                <div class="grid-column span-one-third">
+                    <a target="_blank" href="https://uxtools.co/blog/33-activity-ideas-for-remote-ux-workshops/" class="link link--text pointer">
+                        <img class="rounded" src="/img/workshop.png" alt="Fixing User Personas">
+                        <p class="bold mt2">33 Activity Ideas for Remote UX&nbsp;Workshops&nbsp;&nbsp;→</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<section class="pt10 pb10">
+    <div class="container--md pb5">
+        <h3 class="all-caps bold mb2">ABOUT ME</h3>
+
+        <div class="grid-row grid-row--bottom">
+            <div class="grid-column">
+                <p>Ad eas enim res ab Epicuro praecepta dantur. Quid ergo attinet gloriose loqui, nisi constanter loquare? Si qua in iis corrigere voluit, deteriora fecit. Te enim iudicem aequum puto, modo quae dicat ille bene noris.</p>
+                <div class="mt7">
+                    <a href="" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
+                    <span class="inline-block sm:block sm:align--center">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                </div>
+                
+            </div>
+            <div class="grid-column span-6 align--right sm:align--center">
+                <div class="pb2">
+                    <a href="" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
+                    <a href="" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+</section>
