--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -2,7 +2,7 @@
 // -------------------------------------------------------------------
 .btn {
     background-image: none; // Reset unusual Firefox-on-Android default style: https://github.com/necolas/normalize.css/issues/214
-    border-radius: $border-radius;
+    border-radius: 30px;
     border-style: solid;
     border-width: $border-width;
     cursor: pointer;
@@ -98,19 +98,19 @@ a.btn {
 // -------------------------------------------------------------------
 // Default button
 .btn--default {
-    background-color: $gray-6;
-    border-color: $gray-6;
-    color: $white;
+    background-color: $white;
+    border-color: $white;
+    color: $gray-6;
 
     &:hover,
     &:focus {
-        background-color: $gray-5;
-        border-color: $gray-5;
+        background-color: $white;
+        border-color: $white;
     }
 
     &:active {
-        background-color: $gray-4;
-        border-color: $gray-4;
+        background-color: $gray-6;
+        border-color: $gray-6;
     }
 }
 
