White pages and content

--- a/_layouts/default-light.html
+++ b/_layouts/default-light.html
@@ -3,9 +3,13 @@
 
     {%- include head.html -%}
 
-    <body class="dark-body has-animations">
+    <body class="light-body has-animations">
+
+        {%- include header.html -%}
 
         {{ content }}
+
+        {%- include footer.html -%}
 
         {%- include foot.html -%}
         
