--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,11 +7,11 @@ layout: default
         <nav>
             <div class="grid-row grid-row--center">
                 <div class="grid-column">
-                    <img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+                    <a class="link" href="/"><img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman"></a>
                 </div>
                 <div class="grid-column align--right">
-                    <a href="" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
-                    <a href="" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
+                    <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
                 </div>
             </div>
         </nav>
@@ -23,10 +23,10 @@ layout: default
         <div class="grid-row">
             <div class="grid-column">
                 <p class="h1 bold mb5">Hi, I'm Jordan.</p>
-                <p class="h2 mb2">I'm a Senior UX Researcher and Experience Designer with 8+ years constructing digital&nbsp;experiences.</p>
+                <p class="h2 mb2">A Senior UX Researcher and Experience Designer with 8+ years constructing digital&nbsp;experiences.</p>
                 <p class="h2">I'm passionate about user-first and evidence-based&nbsp;design.</p>
                 <div class="mt7">
-                    <a href="" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
+                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
                     <span class="sm:block sm:align--center">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
             </div>
@@ -57,7 +57,7 @@ layout: default
         <div class="grid-row">
             <div class="grid-column">
                 <h3 class="all-caps bold mb2">ARTICLES</h3>
-                <p>I'm the Co-Creator of <a class="link" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 10k email subscribers. Here are some articles I've recently written and illustrated.</p>
+                <p>I'm the Co-Creator of <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 10k email subscribers. Here are some articles I've recently written and illustrated.</p>
             </div>
             <div class="grid-column span-6"></div>
         </div>
@@ -88,26 +88,29 @@ layout: default
     </div>
 </section>
 
-<section class="pt10 pb10">
+<footer class="pt10 pb10">
     <div class="container--md pb5">
         <h3 class="all-caps bold mb2">ABOUT ME</h3>
 
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">
-                <p>Ad eas enim res ab Epicuro praecepta dantur. Quid ergo attinet gloriose loqui, nisi constanter loquare? Si qua in iis corrigere voluit, deteriora fecit. Te enim iudicem aequum puto, modo quae dicat ille bene noris.</p>
-                <div class="mt7">
-                    <a href="" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
+                <p class="mb1">I started designing and building websites as a side project and to build additional skills and feel in love with it.</p>
+                <p class="mb1">I'm most interested in ... I also enjoy teaching and writing about design. I do that mostly through <a class="link" href="https://uxtools.co/">UX Tools</a> these days, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>.</p>
+                <p class="mb1">When I'm not desiging, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
+                <p><a href="" class="link">Resume</a></p>
+                <div class="mt8">
+                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
                     <span class="inline-block sm:block sm:align--center">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
                 
             </div>
             <div class="grid-column span-6 align--right sm:align--center">
                 <div class="pb2">
-                    <a href="" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
-                    <a href="" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
+                    <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
                 </div>
             </div>
         </div>
         
     </div>
-</section>
+</footer>
