--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
                 <p><a href="" class="link">Resume</a></p>
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--dark mr3">desk@jrdnbwmn.com</a>
-                    <span class="inline-block sm:block sm:align--center">text <a class="link link--text-dark" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="inline-block sm:block sm:align--center sm:mt3">text <a class="link link--text-dark" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
                 
             </div>
