--- a/_sass/_margins.scss
+++ b/_sass/_margins.scss
@@ -92,3 +92,9 @@
         margin-top: $space-2;
     }
 }
+
+.sm\:mt3 {
+    @media screen and (max-width: $breakpoint--sm) {
+        margin-top: $space-3;
+    }
+}
