--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@ layout: default
                 <p class="h2">I'm passionate about user-first and evidence-based&nbsp;design.</p>
                 <div class="mt7">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
-                    <span class="sm:block sm:align--center">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="sm:block sm:align--center sm:mt3">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
             </div>
             <div class="grid-column span-6"></div>
@@ -62,21 +62,21 @@ layout: default
             <div class="grid-column span-6"></div>
         </div>
 
-        <div class="mt3">
+        <div>
             <div class="grid-row">
-                <div class="grid-column span-one-third">
+                <div class="grid-column span-one-third mt3 mb2">
                     <a target="_blank" href="https://uxtools.co/blog/what-no-one-explains-about-the-design-process/" class="link link--text pointer">
                         <img class="rounded" src="/img/process.svg" alt="Fixing User Personas">
                         <p class="bold mt2">What No One Explains About the Design&nbsp;Process&nbsp;&nbsp;→</p>
                     </a>
                 </div>
-                <div class="grid-column span-one-third">
+                <div class="grid-column span-one-third mt3 mb2">
                     <a target="_blank" href="https://uxtools.co/blog/fixing-user-personas/" class="link link--text pointer">
                         <img class="rounded" src="/img/fixing-user-personas.svg" alt="Fixing User Personas">
                         <p class="bold mt2">Fixing User&nbsp;Personas&nbsp;&nbsp;→</p>
                     </a>
                 </div>
-                <div class="grid-column span-one-third">
+                <div class="grid-column span-one-third mt3 mb2">
                     <a target="_blank" href="https://uxtools.co/blog/33-activity-ideas-for-remote-ux-workshops/" class="link link--text pointer">
                         <img class="rounded" src="/img/workshop.png" alt="Fixing User Personas">
                         <p class="bold mt2">33 Activity Ideas for Remote UX&nbsp;Workshops&nbsp;&nbsp;→</p>
@@ -88,7 +88,7 @@ layout: default
     </div>
 </section>
 
-<footer class="pt10 pb10">
+<footer class="pt8 pb10">
     <div class="container--md pb5">
         <h3 class="all-caps bold mb2">ABOUT ME</h3>
 
@@ -100,12 +100,11 @@ layout: default
                 <p><a href="" class="link">Resume</a></p>
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
-                    <span class="inline-block sm:block sm:align--center">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="inline-block sm:block sm:align--center sm:mt3">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
-                
             </div>
             <div class="grid-column span-6 align--right sm:align--center">
-                <div class="pb2">
+                <div class="pb2 sm:mt3">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
                 </div>
