Starting on the first case study

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -237,7 +237,7 @@ aside {
     top: -21px;
     left: -21px;
     padding: 3px;
-    background: $gray-1;
+    background: $white;
     border-radius: 50%;
 }
 .info {
