Case study content finished

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,13 +40,23 @@ layout: default
     <div class="container--md">
         <div class="grid-row">
             <div class="grid-column">
-                <h3 class="all-caps bold mb2">WORK</h3>
+                <h3 class="mb2">Work</h3>
                 <p>Take a look at some projects I've worked on.</p>
             </div>
             <div class="grid-column span-6"></div>
         </div>
 
-        <div class="border--full rounded mt3" style="height: 200px"></div>
+        <a class="block link link--text border--full rounded pt3 pb3 pr4 pl4 mt3" href="/internal-research-app/">
+            <div class="grid-row grid-row--center">
+                <div class="grid-column align--center">
+                    <img src="/img/case-studies/research-app-white.svg" alt="Internal Research App" style="height: 150px">
+                </div>
+                <div class="grid-column span-three-fourths">
+                    <h4 class="mb1">Internal Research App →</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis suae urbis conservatorem Codrum, quis Erechthei filias non maxime laudat? Qua tu etiam inprudens utebare non numquam. </p>
+                </div>
+            </div>
+        </a>
         <div class="border--full rounded mt5" style="height: 200px"></div>
         <div class="border--full rounded mt5" style="height: 200px"></div>
     </div>
@@ -56,7 +66,7 @@ layout: default
     <div class="container--md">
         <div class="grid-row">
             <div class="grid-column">
-                <h3 class="all-caps bold mb2">ARTICLES</h3>
+                <h3 class="mb2">Articles</h3>
                 <p>I'm the Co-Creator of <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 10k email subscribers. Here are some articles I've recently written and illustrated.</p>
             </div>
             <div class="grid-column span-6"></div>
@@ -90,12 +100,13 @@ layout: default
 
 <footer class="pt8 pb10">
     <div class="container--md pb5">
-        <h3 class="all-caps bold mb2">ABOUT ME</h3>
+        <h3 class="mb2">About Me</h3>
 
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">
                 <p class="mb1">I started designing and building websites as a side project and to build additional skills and feel in love with it.</p>
                 <p class="mb1">I'm most interested in ... I also enjoy teaching and writing about design. I do that mostly through <a class="link" href="https://uxtools.co/">UX Tools</a> these days, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>.</p>
+                <p>I like to do side projects in my free time like Papaya.</p>
                 <p class="mb1">When I'm not desiging, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
                 <p><a href="" class="link">Resume</a></p>
                 <div class="mt8">
