--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">
                 <div class="mt8">
-                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--dark mr3">desk@jrdnbwmn.com</a>
-                    <span class="inline-block sm:block sm:align--center sm:mt3">text <a class="link link--text-dark" href="tel:8643295207">(864) 329-5207</a></span>
+                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--dark mr5">desk@jrdnbwmn.com</a>
+                    <span class="inline-block sm:block sm:align--center sm:mt3"><a class="link link--text-dark" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
                 
             </div>
