--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,14 +23,15 @@ layout: default
         <div class="grid-row">
             <div class="grid-column">
                 <p class="h1 bold mb5">Hi, I'm Jordan.</p>
-                <p class="h2 mb2">A Senior UX Researcher and Experience Designer with 8+ years constructing digital&nbsp;experiences.</p>
-                <p class="h2">I'm passionate about user-first and evidence-based&nbsp;design.</p>
+                <p class="h2 mb2">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
+                <p class="h2">I'm passionate about user-first, evidence-based&nbsp;design.</p>
                 <div class="mt7">
-                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
-                    <span class="sm:block sm:align--center sm:mt3">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
+                    <span class="mr5 sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="" target="_blank">Résumé</a></span>
                 </div>
             </div>
-            <div class="grid-column span-6"></div>
+            <div class="grid-column span-9"></div>
         </div>
 
     </div>
@@ -40,8 +41,7 @@ layout: default
     <div class="container--md">
         <div class="grid-row">
             <div class="grid-column">
-                <h3 class="mb2">Work</h3>
-                <p>Take a look at some projects I've worked on.</p>
+                <h3 class="">Work</h3>
             </div>
             <div class="grid-column span-6"></div>
         </div>
@@ -57,8 +57,28 @@ layout: default
                 </div>
             </div>
         </a>
-        <div class="border--full rounded mt5" style="height: 200px"></div>
-        <div class="border--full rounded mt5" style="height: 200px"></div>
+        <a class="block link link--text border--full rounded pt3 pb3 pr4 pl4 mt3" href="/catylist-design-system/">
+            <div class="grid-row grid-row--center">
+                <div class="grid-column align--center">
+                    <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 150px">
+                </div>
+                <div class="grid-column span-three-fourths">
+                    <h4 class="mb1">Catylist Design System →</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis suae urbis conservatorem Codrum, quis Erechthei filias non maxime laudat? Qua tu etiam inprudens utebare non numquam. </p>
+                </div>
+            </div>
+        </a>
+        <a class="block link link--text border--full rounded pt3 pb3 pr4 pl4 mt3" href="/property-edit-form/">
+            <div class="grid-row grid-row--center">
+                <div class="grid-column align--center">
+                    <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 150px">
+                </div>
+                <div class="grid-column span-three-fourths">
+                    <h4 class="mb1">Property Edit Form →</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis suae urbis conservatorem Codrum, quis Erechthei filias non maxime laudat? Qua tu etiam inprudens utebare non numquam. </p>
+                </div>
+            </div>
+        </a>
     </div>
 </section>
 
@@ -67,9 +87,9 @@ layout: default
         <div class="grid-row">
             <div class="grid-column">
                 <h3 class="mb2">Articles</h3>
-                <p>I'm the Co-Creator of <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 10k email subscribers. Here are some articles I've recently written and illustrated.</p>
+                <p>I'm the Co-Creator of <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 100k monthly pageviews. Here are some articles I've recently written and illustrated.</p>
             </div>
-            <div class="grid-column span-6"></div>
+            <div class="grid-column span-one-third"></div>
         </div>
 
         <div>
@@ -104,17 +124,16 @@ layout: default
 
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">
-                <p class="mb1">I started designing and building websites as a side project and to build additional skills and feel in love with it.</p>
-                <p class="mb1">I'm most interested in ... I also enjoy teaching and writing about design. I do that mostly through <a class="link" href="https://uxtools.co/">UX Tools</a> these days, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>.</p>
-                <p>I like to do side projects in my free time like Papaya.</p>
-                <p class="mb1">When I'm not desiging, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
-                <p><a href="" class="link">Resume</a></p>
+                <!-- <p class="mb1">I started designing and building websites back in 2012. I loved it so much that I decided to switch my career to UX. Over the years, I've filled many roles and worked on a large variety of projects.</p> -->
+                <p class="mb1">I'm most interested in design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other designers.</p>
+                <p class="mb1">I like working on side projects such as <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page templates.</p>
+                <p class="mb1">When I'm not designing, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
                 <div class="mt8">
-                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr3">desk@jrdnbwmn.com</a>
-                    <span class="inline-block sm:block sm:align--center sm:mt3">text <a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
+                    <span class="inline-block sm:block sm:align--center sm:mt3"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
                 </div>
             </div>
-            <div class="grid-column span-6 align--right sm:align--center">
+            <div class="grid-column span-one-third align--right sm:align--center">
                 <div class="pb2 sm:mt3">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
