--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
                     <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="" target="_blank">Résumé</a></span>
                 </div>
             </div>
-            <div class="grid-column span-9"></div>
+            <div class="grid-column span-8"></div>
         </div>
 
     </div>
@@ -53,7 +53,7 @@ layout: default
                 </div>
                 <div class="grid-column span-three-fourths">
                     <h4 class="mb1">Internal Research App →</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis suae urbis conservatorem Codrum, quis Erechthei filias non maxime laudat? Qua tu etiam inprudens utebare non numquam. </p>
+                    <p>I designed a scalable, efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies.</p>
                 </div>
             </div>
         </a>
@@ -64,7 +64,7 @@ layout: default
                 </div>
                 <div class="grid-column span-three-fourths">
                     <h4 class="mb1">Catylist Design System →</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis suae urbis conservatorem Codrum, quis Erechthei filias non maxime laudat? Qua tu etiam inprudens utebare non numquam. </p>
+                    <p>I built Catylist's design system, used across multiple apps and websites, from scratch. This included competitive analysis and focusing heavily on usability and&nbsp;accessibility.</p>
                 </div>
             </div>
         </a>
@@ -75,7 +75,7 @@ layout: default
                 </div>
                 <div class="grid-column span-three-fourths">
                     <h4 class="mb1">Property Edit Form →</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis suae urbis conservatorem Codrum, quis Erechthei filias non maxime laudat? Qua tu etiam inprudens utebare non numquam. </p>
+                    <p>I designed a huge form with 100+ fields for users to submit property edits. I involved users in the processs and included several features that allowed for easy&nbsp;navigation.</p>
                 </div>
             </div>
         </a>
@@ -118,15 +118,15 @@ layout: default
     </div>
 </section>
 
-<footer class="pt8 pb10">
+<footer class="pt8 pb8">
     <div class="container--md pb5">
         <h3 class="mb2">About Me</h3>
 
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">
                 <!-- <p class="mb1">I started designing and building websites back in 2012. I loved it so much that I decided to switch my career to UX. Over the years, I've filled many roles and worked on a large variety of projects.</p> -->
-                <p class="mb1">I'm most interested in design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other designers.</p>
-                <p class="mb1">I like working on side projects such as <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page templates.</p>
+                <p class="mb1">I love digging into design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other&nbsp;designers.</p>
+                <p class="mb1">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page templates.</p>
                 <p class="mb1">When I'm not designing, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
