--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -43,11 +43,11 @@ $half-baseline:           $baseline/2 !default;
 // Typography
 // -------------------------------------------------------------------
 // Font families
-$heading:                 acumin-pro, "Inter", sans-serif !default;
-$sans-serif:              acumin-pro, "Inter", sans-serif !default;
-$bold:                    acumin-pro, "Inter", sans-serif !default;
-$bold-italic:             acumin-pro, "Inter", sans-serif !default;
-$italic:                  acumin-pro, "Inter", sans-serif !default;
+$heading:                 "Inter", sans-serif !default;
+$sans-serif:              "Inter", sans-serif !default;
+$bold:                    "Inter", sans-serif !default;
+$bold-italic:             "Inter", sans-serif !default;
+$italic:                  "Inter", sans-serif !default;
 $monospace:               Monaco, Menlo, monospace !default;
 $serif:                   Georgia, serif !default;
 
