--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="pt10">
-    <div class="container--md">
+    <div class="container--lg">
         <nav>
             <div class="grid-row grid-row--center">
                 <div class="grid-column">
