--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <header class="pt10">
-    <div class="container--md">
+    <div class="container--lg">
         <nav>
             <div class="grid-row grid-row--center">
                 <div class="grid-column">
@@ -19,115 +19,165 @@ layout: default
 </header>
 
 <section class="pt10 pb10">
-    <div class="container--md">
+    <div class="container--lg">
+
         <div class="grid-row">
+            <div class="grid-column span-7">
+                <h1 class="mb5">Hi, I'm Jordan.</h1>
+            </div>
+            <div class="grid-column span-1"></div>
             <div class="grid-column">
-                <p class="h1 bold mb5">Hi, I'm Jordan.</p>
                 <p class="h2 mb2">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
                 <p class="h2">I'm passionate about user-first, evidence-based&nbsp;design.</p>
                 <div class="mt7">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
                     <span class="mr5 sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
-                    <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="" target="_blank">Résumé</a></span>
+                    <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
                 </div>
             </div>
-            <div class="grid-column span-8"></div>
+        </div>
+
+        <div class="grid-row">
+            <div class="grid-column span-4"></div>
+            <div class="grid-column">
+                
+                
+            </div>
+            <div class="grid-column span-4"></div>
         </div>
 
     </div>
 </section>
 
 <section class="pt10 pb10">
-    <div class="container--md">
+    <div class="container--lg">
+
+        <div class="grid-row">
+            <div class="grid-column span-7">
+                <h2 class="mb2">Work</h2>
+                <p>Check out some of the projects I've worked on during the last few years.</p>
+            </div>
+            <div class="grid-column span-1"></div>
+            <div class="grid-column">
+                <div class="grid-row">
+                    <div class="grid-column">
+                        <a class="block link link--text border--full rounded p3" href="/internal-research-app/">
+                                <div class="mb3">
+                                    <img src="/img/case-studies/research-app-white.svg" alt="Internal Research App" style="height: 130px">
+                                </div>
+                                <div class="">
+                                    <h4 class="mb1">Internal Research App&nbsp;→</h4>
+                                    <p>I designed a scalable, efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies. Here's some more stuff and stuff.</p>
+                                </div>
+                        </a>
+                    </div>
+                    <div class="grid-column">
+                        <a class="block link link--text border--full rounded p3" href="/catylist-design-system/">
+                                <div class="mb3">
+                                    <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 130px">
+                                </div>
+                                <div class="">
+                                    <h4 class="mb1">Catylist Design System&nbsp;→</h4>
+                                    <p>I built Catylist's design system from scratch, which was used across multiple apps and websites. This included competitive analysis and focusing heavily on usability.</p>
+                                </div>
+                        </a>
+                    </div>
+                    <div class="grid-column">
+                        <a class="block link link--text border--full rounded p3" href="/property-edit-form/">
+                                <div class="mb3">
+                                    <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 130px">
+                                </div>
+                                <div class="">
+                                    <h4 class="mb1">Property Edit Form&nbsp;→</h4>
+                                    <p>I designed a huge form with 100+ fields for users to submit property edits. I involved users in the processs and included several features that allowed for easy&nbsp;navigation.</p>
+                                </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <div class="grid-row">
             <div class="grid-column">
-                <h3 class="">Work</h3>
+                
             </div>
             <div class="grid-column span-6"></div>
         </div>
 
-        <a class="block link link--text border--full rounded pt3 pb3 pr4 pl4 mt3" href="/internal-research-app/">
-            <div class="grid-row grid-row--center">
-                <div class="grid-column align--center">
-                    <img src="/img/case-studies/research-app-white.svg" alt="Internal Research App" style="height: 150px">
-                </div>
-                <div class="grid-column span-three-fourths">
-                    <h4 class="mb1">Internal Research App →</h4>
-                    <p>I designed a scalable, efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies.</p>
-                </div>
-            </div>
-        </a>
-        <a class="block link link--text border--full rounded pt3 pb3 pr4 pl4 mt3" href="/catylist-design-system/">
-            <div class="grid-row grid-row--center">
-                <div class="grid-column align--center">
-                    <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 150px">
-                </div>
-                <div class="grid-column span-three-fourths">
-                    <h4 class="mb1">Catylist Design System →</h4>
-                    <p>I built Catylist's design system, used across multiple apps and websites, from scratch. This included competitive analysis and focusing heavily on usability and&nbsp;accessibility.</p>
-                </div>
-            </div>
-        </a>
-        <a class="block link link--text border--full rounded pt3 pb3 pr4 pl4 mt3" href="/property-edit-form/">
-            <div class="grid-row grid-row--center">
-                <div class="grid-column align--center">
-                    <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 150px">
-                </div>
-                <div class="grid-column span-three-fourths">
-                    <h4 class="mb1">Property Edit Form →</h4>
-                    <p>I designed a huge form with 100+ fields for users to submit property edits. I involved users in the processs and included several features that allowed for easy&nbsp;navigation.</p>
-                </div>
-            </div>
-        </a>
+        
     </div>
 </section>
 
 <section class="pt10 pb10">
-    <div class="container--md">
+    <div class="container--lg">
+        
         <div class="grid-row">
-            <div class="grid-column">
-                <h3 class="mb2">Articles</h3>
-                <p>I'm the Co-Creator of <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>, a website about digital design with over 100k monthly pageviews. Here are some articles I've recently written and illustrated.</p>
+            <div class="grid-column span-7">
+                <h2 class="mb2">Articles</h2>
+                <p>Here are some articles I wrote and illustrated on a site I co-created called <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>.</p>
             </div>
-            <div class="grid-column span-one-third"></div>
+            <div class="grid-column span-1"></div>
+            <div class="grid-column">
+                <div>
+                    <div class="grid-row">
+                        <div class="grid-column span-one-third mb2">
+                            <a target="_blank" href="https://uxtools.co/blog/what-no-one-explains-about-the-design-process/" class="link link--text pointer">
+                                <img class="rounded" src="/img/process.svg" alt="Fixing User Personas">
+                                <p class="bold mt2">What No One Explains About the Design&nbsp;Process&nbsp;&nbsp;→</p>
+                            </a>
+                        </div>
+                        <div class="grid-column span-one-third mb2">
+                            <a target="_blank" href="https://uxtools.co/blog/fixing-user-personas/" class="link link--text pointer">
+                                <img class="rounded" src="/img/fixing-user-personas.svg" alt="Fixing User Personas">
+                                <p class="bold mt2">Fixing User&nbsp;Personas&nbsp;&nbsp;→</p>
+                            </a>
+                        </div>
+                        <div class="grid-column span-one-third mb2">
+                            <a target="_blank" href="https://uxtools.co/blog/33-activity-ideas-for-remote-ux-workshops/" class="link link--text pointer">
+                                <img class="rounded" src="/img/workshop.png" alt="Fixing User Personas">
+                                <p class="bold mt2">33 Activity Ideas for Remote UX&nbsp;Workshops&nbsp;&nbsp;→</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div>
-            <div class="grid-row">
-                <div class="grid-column span-one-third mt3 mb2">
-                    <a target="_blank" href="https://uxtools.co/blog/what-no-one-explains-about-the-design-process/" class="link link--text pointer">
-                        <img class="rounded" src="/img/process.svg" alt="Fixing User Personas">
-                        <p class="bold mt2">What No One Explains About the Design&nbsp;Process&nbsp;&nbsp;→</p>
-                    </a>
-                </div>
-                <div class="grid-column span-one-third mt3 mb2">
-                    <a target="_blank" href="https://uxtools.co/blog/fixing-user-personas/" class="link link--text pointer">
-                        <img class="rounded" src="/img/fixing-user-personas.svg" alt="Fixing User Personas">
-                        <p class="bold mt2">Fixing User&nbsp;Personas&nbsp;&nbsp;→</p>
-                    </a>
-                </div>
-                <div class="grid-column span-one-third mt3 mb2">
-                    <a target="_blank" href="https://uxtools.co/blog/33-activity-ideas-for-remote-ux-workshops/" class="link link--text pointer">
-                        <img class="rounded" src="/img/workshop.png" alt="Fixing User Personas">
-                        <p class="bold mt2">33 Activity Ideas for Remote UX&nbsp;Workshops&nbsp;&nbsp;→</p>
-                    </a>
-                </div>
+
+        <div class="grid-row mb4">
+            <div class="grid-column span-4"></div>
+            <div class="grid-column">
+                
             </div>
+            <div class="grid-column span-4"></div>
         </div>
+
+        
 
     </div>
 </section>
 
-<footer class="pt8 pb8">
-    <div class="container--md pb5">
-        <h3 class="mb2">About Me</h3>
-
-        <div class="grid-row grid-row--bottom">
+<section class="pt10 pb10">
+    <div class="container--lg">
+        <div class="grid-row">
+            <div class="grid-column span-7">
+                <h2 class="mb2">About Me</h2>
+            </div>
+            <div class="grid-column span-1"></div>
             <div class="grid-column">
-                <!-- <p class="mb1">I started designing and building websites back in 2012. I loved it so much that I decided to switch my career to UX. Over the years, I've filled many roles and worked on a large variety of projects.</p> -->
-                <p class="mb1">I love digging into design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other&nbsp;designers.</p>
-                <p class="mb1">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page templates.</p>
-                <p class="mb1">When I'm not designing, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
+                <p class="mb2">I love digging into design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other&nbsp;designers.</p>
+                <p class="mb2">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page templates.</p>
+                <p class="mb0">When I'm not designing, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="pt8 pb8">
+    <div class="container--lg pb5">
+        <div class="grid-row grid-row--bottom">
+            <div class="grid-column">                
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
                     <span class="inline-block sm:block sm:align--center sm:mt3"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
@@ -140,6 +190,5 @@ layout: default
                 </div>
             </div>
         </div>
-        
     </div>
 </footer>
