--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -105,6 +105,7 @@
         padding-top: $space-4;
         padding-bottom: $space-4;
         padding-left: 2rem;
+        padding-right: 2rem;
         li {
             padding-right: $space-5;
             padding-left: $space-1;
@@ -191,7 +192,7 @@
         #markdown-toc {
             margin-left: $space-4;
             margin-right: $space-4;
-            padding-left: 2.5rem;
+            padding-left: 1rem;
             padding-right: 1rem;
 
             li {
