--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,19 @@
 <footer class="pt10 pb10">
-    <div class="container--md pb5">
-
+    <div class="container--lg">
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--dark mr5">desk@jrdnbwmn.com</a>
-                    <span class="inline-block sm:block sm:align--center sm:mt3"><a class="link link--text-dark" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="mr5 inline-block sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text-dark" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="sm:block sm:align--center sm:mt2"><a class="link link--text-dark" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
                 </div>
-                
             </div>
-            <div class="grid-column span-6 align--right sm:align--center">
+            <div class="grid-column span-6 align--right sm:mt3 sm:align--center">
                 <div class="pb2">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter-dark.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin-dark.svg" alt="LinkedIn"></a>
                 </div>
             </div>
         </div>
-        
     </div>
 </footer>
