--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
-<header class="pt10">
+<header class="pt10 pb3">
     <div class="container--lg">
         <nav>
-            <div class="grid-row grid-row--center">
-                <div class="grid-column">
+            <div class="clearfix">
+                <div class="float--left">
                     <a class="link" href="/"><img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman"></a>
                 </div>
-                <div class="grid-column align--right">
+                <div class="float--right pt2">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter-dark.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin-dark.svg" alt="LinkedIn"></a>
                 </div>
