--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,14 +2,15 @@
 layout: default
 ---
 
-<header class="pt10">
+<!-- Header -->
+<header class="pt10 pb5">
     <div class="container--lg">
         <nav>
-            <div class="grid-row grid-row--center">
-                <div class="grid-column">
+            <div class="clearfix">
+                <div class="float--left">
                     <a class="link" href="/"><img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman"></a>
                 </div>
-                <div class="grid-column align--right">
+                <div class="float--right pt2">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
                 </div>
@@ -18,17 +19,17 @@ layout: default
     </div>
 </header>
 
+<!-- Intro -->
 <section class="pt10 pb10">
     <div class="container--lg">
-
         <div class="grid-row">
             <div class="grid-column span-7">
                 <h1 class="mb5">Hi, I'm Jordan.</h1>
             </div>
             <div class="grid-column span-1"></div>
             <div class="grid-column">
-                <p class="h2 mb2">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
-                <p class="h2">I'm passionate about user-first, evidence-based&nbsp;design.</p>
+                <p class="h2 mb3 heading-text-lh">A Senior UX Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
+                <p class="h2 heading-text-lh">I'm passionate about user-first, evidence-based&nbsp;design.</p>
                 <div class="mt7">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
                     <span class="mr5 sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
@@ -36,22 +37,12 @@ layout: default
                 </div>
             </div>
         </div>
-
-        <div class="grid-row">
-            <div class="grid-column span-4"></div>
-            <div class="grid-column">
-                
-                
-            </div>
-            <div class="grid-column span-4"></div>
-        </div>
-
     </div>
 </section>
 
+<!-- Work -->
 <section class="pt10 pb10">
     <div class="container--lg">
-
         <div class="grid-row">
             <div class="grid-column span-7">
                 <h2 class="mb2">Work</h2>
@@ -62,56 +53,46 @@ layout: default
                 <div class="grid-row">
                     <div class="grid-column">
                         <a class="block link link--text border--full rounded p3" href="/internal-research-app/">
-                                <div class="mb3">
-                                    <img src="/img/case-studies/research-app-white.svg" alt="Internal Research App" style="height: 130px">
-                                </div>
-                                <div class="">
-                                    <h4 class="mb1">Internal Research App&nbsp;→</h4>
-                                    <p>I designed a scalable, efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies. Here's some more stuff and stuff.</p>
-                                </div>
+                            <div class="mb3">
+                                <img src="/img/case-studies/research-app-white.svg" alt="Internal Research App" style="height: 130px">
+                            </div>
+                            <div class="">
+                                <h4 class="mb2">Internal Research App&nbsp;→</h4>
+                                <p>I designed a task-efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies.</p>
+                            </div>
                         </a>
                     </div>
                     <div class="grid-column">
                         <a class="block link link--text border--full rounded p3" href="/catylist-design-system/">
-                                <div class="mb3">
-                                    <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 130px">
-                                </div>
-                                <div class="">
-                                    <h4 class="mb1">Catylist Design System&nbsp;→</h4>
-                                    <p>I built Catylist's design system from scratch, which was used across multiple apps and websites. This included competitive analysis and focusing heavily on usability.</p>
-                                </div>
+                            <div class="mb3">
+                                <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 130px">
+                            </div>
+                            <div class="">
+                                <h4 class="mb2">Catylist Design System&nbsp;→</h4>
+                                <p>I built Catylist's design system from scratch, which was used across multiple apps and websites. This included coding all the HTML and&nbsp;CSS.</p>
+                            </div>
                         </a>
                     </div>
                     <div class="grid-column">
                         <a class="block link link--text border--full rounded p3" href="/property-edit-form/">
-                                <div class="mb3">
-                                    <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 130px">
-                                </div>
-                                <div class="">
-                                    <h4 class="mb1">Property Edit Form&nbsp;→</h4>
-                                    <p>I designed a huge form with 100+ fields for users to submit property edits. I involved users in the processs and included several features that allowed for easy&nbsp;navigation.</p>
-                                </div>
+                            <div class="mb3">
+                                <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 130px">
+                            </div>
+                            <div class="">
+                                <h4 class="mb2">Property Edit Form&nbsp;→</h4>
+                                <p>I designed a huge form with 100+ fields for users to submit property edits. Included a few features that helped the user quickly find&nbsp;fields.</p>
+                            </div>
                         </a>
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <div class="grid-row">
-            <div class="grid-column">
-                
-            </div>
-            <div class="grid-column span-6"></div>
-        </div>
-
-        
     </div>
 </section>
 
+<!-- Articles -->
 <section class="pt10 pb10">
     <div class="container--lg">
-        
         <div class="grid-row">
             <div class="grid-column span-7">
                 <h2 class="mb2">Articles</h2>
@@ -143,21 +124,10 @@ layout: default
                 </div>
             </div>
         </div>
-
-
-        <div class="grid-row mb4">
-            <div class="grid-column span-4"></div>
-            <div class="grid-column">
-                
-            </div>
-            <div class="grid-column span-4"></div>
-        </div>
-
-        
-
     </div>
 </section>
 
+<!-- About me -->
 <section class="pt10 pb10">
     <div class="container--lg">
         <div class="grid-row">
@@ -167,20 +137,22 @@ layout: default
             <div class="grid-column span-1"></div>
             <div class="grid-column">
                 <p class="mb2">I love digging into design work that's backed by research, makes a large business impact, and begins and ends with the user. I'm also interested in leading and teaching other&nbsp;designers.</p>
-                <p class="mb2">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page templates.</p>
+                <p class="mb2">On the side, I enjoy working on projects like <a class="link" href="https://uxtools.co/">UX Tools</a>, where we just launched some <a class="link" href="https://uxtools.co/challenges/" target="_blank">UX Challenges</a>. I created a site called <a class="link" href="https://www.papayatemplates.com/" target="_blank">Papaya</a> last year with several landing page&nbsp;templates.</p>
                 <p class="mb0">When I'm not designing, you can find me hanging out with my wife and four kids, reading, and mountain&nbsp;biking.</p>
             </div>
         </div>
     </div>
 </section>
 
-<footer class="pt8 pb8">
-    <div class="container--lg pb5">
+<!-- Footer -->
+<footer class="pt8 pb10">
+    <div class="container--lg">
         <div class="grid-row grid-row--bottom">
             <div class="grid-column">                
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
-                    <span class="inline-block sm:block sm:align--center sm:mt3"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="mr5 inline-block sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
+                    <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
                 </div>
             </div>
             <div class="grid-column span-one-third align--right sm:align--center">
