--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,7 +33,7 @@ layout: default
                 <div class="mt7">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
                     <span class="mr5 sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
-                    <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
+                    <span class="sm:block sm:align--center sm:mt2"><a class="link link--text" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
                 </div>
             </div>
         </div>
@@ -46,12 +46,12 @@ layout: default
         <div class="grid-row">
             <div class="grid-column span-7">
                 <h2 class="mb2">Work</h2>
-                <p>Check out some of the projects I've worked on during the last few years.</p>
+                <p class="mb3">Check out some of the projects I've worked on during the last few years.</p>
             </div>
             <div class="grid-column span-1"></div>
             <div class="grid-column">
                 <div class="grid-row">
-                    <div class="grid-column">
+                    <div class="grid-column sm:mt3">
                         <a class="block link link--text border--full rounded p3" href="/internal-research-app/">
                             <div class="mb3">
                                 <img src="/img/case-studies/research-app-white.svg" alt="Internal Research App" style="height: 130px">
@@ -62,7 +62,7 @@ layout: default
                             </div>
                         </a>
                     </div>
-                    <div class="grid-column">
+                    <div class="grid-column sm:mt3">
                         <a class="block link link--text border--full rounded p3" href="/catylist-design-system/">
                             <div class="mb3">
                                 <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 130px">
@@ -73,7 +73,7 @@ layout: default
                             </div>
                         </a>
                     </div>
-                    <div class="grid-column">
+                    <div class="grid-column sm:mt3">
                         <a class="block link link--text border--full rounded p3" href="/property-edit-form/">
                             <div class="mb3">
                                 <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 130px">
@@ -96,25 +96,25 @@ layout: default
         <div class="grid-row">
             <div class="grid-column span-7">
                 <h2 class="mb2">Articles</h2>
-                <p>Here are some articles I wrote and illustrated on a site I co-created called <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>.</p>
+                <p class="mb3">Here are some articles I wrote and illustrated on a site I co-created called <a class="link" target="_blank" href="https://uxtools.co">UX Tools</a>.</p>
             </div>
             <div class="grid-column span-1"></div>
             <div class="grid-column">
                 <div>
                     <div class="grid-row">
-                        <div class="grid-column span-one-third mb2">
+                        <div class="grid-column span-one-third sm:mt3 mb2">
                             <a target="_blank" href="https://uxtools.co/blog/what-no-one-explains-about-the-design-process/" class="link link--text pointer">
                                 <img class="rounded" src="/img/process.svg" alt="Fixing User Personas">
                                 <p class="bold mt2">What No One Explains About the Design&nbsp;Process&nbsp;&nbsp;→</p>
                             </a>
                         </div>
-                        <div class="grid-column span-one-third mb2">
+                        <div class="grid-column span-one-third sm:mt3 mb2">
                             <a target="_blank" href="https://uxtools.co/blog/fixing-user-personas/" class="link link--text pointer">
                                 <img class="rounded" src="/img/fixing-user-personas.svg" alt="Fixing User Personas">
                                 <p class="bold mt2">Fixing User&nbsp;Personas&nbsp;&nbsp;→</p>
                             </a>
                         </div>
-                        <div class="grid-column span-one-third mb2">
+                        <div class="grid-column span-one-third sm:mt3 mb2">
                             <a target="_blank" href="https://uxtools.co/blog/33-activity-ideas-for-remote-ux-workshops/" class="link link--text pointer">
                                 <img class="rounded" src="/img/workshop.png" alt="Fixing User Personas">
                                 <p class="bold mt2">33 Activity Ideas for Remote UX&nbsp;Workshops&nbsp;&nbsp;→</p>
@@ -132,7 +132,7 @@ layout: default
     <div class="container--lg">
         <div class="grid-row">
             <div class="grid-column span-7">
-                <h2 class="mb2">About Me</h2>
+                <h2 class="mb3">About Me</h2>
             </div>
             <div class="grid-column span-1"></div>
             <div class="grid-column">
@@ -152,7 +152,7 @@ layout: default
                 <div class="mt8">
                     <a href="mailto:desk@jrdnbwmn.com" class="btn btn--default mr5">desk@jrdnbwmn.com</a>
                     <span class="mr5 inline-block sm:block sm:align--center sm:mt3 sm:mr0"><a class="link link--text" href="tel:8643295207">(864) 329-5207</a></span>
-                    <span class="sm:block sm:align--center sm:mt3"><a class="link link--text" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
+                    <span class="sm:block sm:align--center sm:mt2"><a class="link link--text" href="https://drive.google.com/file/d/1gZYD9zrhy4ocupxS_yOYZTCQA7FU_x1A/view?usp=sharing" target="_blank">Résumé</a></span>
                 </div>
             </div>
             <div class="grid-column span-one-third align--right sm:align--center">
