--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -120,9 +120,9 @@ $heading-mb:              $p-mb !default;
 // -------------------------------------------------------------------
 // Breakpoints
 // Mobile Safari has problems with rems being used in media queries
-$breakpoint--sm:          40em !default;
-$breakpoint--md:          990px !default;
-$breakpoint--lg:          60em !default;
+$breakpoint--sm:          1200px !default;
+$breakpoint--md:          1200px !default;
+$breakpoint--lg:          1200px !default;
 $header-breakpoint:       1025px !default;
 
 
